# beatem

./: CMakeLists.txt
include/: TestScreen.hpp
include/Components/: AnimatedSpriteComponent.hpp  PositionComponent.hpp  SpriteComponent.hpp
include/Entities/: BackgroundEntity.hpp  ScottEntity.hpp
include/Framework/: JSEcs.hpp  JSGame.hpp  JSScreen.hpp  JSTextureManager.hpp
libs/: jsgaen.lib
src/: TestScreen.cpp  beatemup.cpp  main.cpp
src/Components/: AnimatedSpriteComponent.cpp  PositionComponent.cpp  SpriteComponent.cpp
src/Entities/: BackgroundEntity.cpp  ScottEntity.cpp
